--- a/static/scss/includes/_sidenav.scss
+++ b/static/scss/includes/_sidenav.scss
@@ -145,6 +145,9 @@
 			display: flex;
 			align-items: center;
 		}
+    .name-job{
+      overflow: hidden;
+    }
 		img {
 			height: 52px;
 			width: 52px;
